maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:4: error: ':' expected but ')' found.
def isDirectionFree(dir):Boolean={var x:Direction=getDirection();
                       ^PledgeMaze:18: error: identifier expected but '}' found.
                   } 
                   ^